Remove unused maven-compiler-plugin configuration from pom.xml and gitHubActions